Corrigindo erro na criação da lista pra insert de valores